more html implements

--- a/personal website /workexperience.html
+++ b/personal website /workexperience.html
@@ -8,6 +8,28 @@
 <body>
   <h1>WORK EXPERIENCE</h1>
   <br/>
+  <table border="1px">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Title</th>
+        <th>Company</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th>2020-Present</th>
+        <th>Analytical Development Associate</th>
+        <th>Sangamo Therapeutics</th>
+      </tr>
+      <tr>
+        <th>2015-2019</th>
+        <th>scientist</th>
+        <th>ProMab Biotechnologies,Inc.</th>
+      </tr>
+    </tbody>
+    <tfoot></tfoot>
+  </table>
   <h3><em>
     Analytical Development Associate<strong><br/><a href="https://www.sangamo.com/">Sangamo Therapeutics</a></strong></em>
   </h3>
