--- a/personal website /index.html
+++ b/personal website /index.html
@@ -6,9 +6,15 @@
     <title>💛🌻Cindy's 🧬🥰personal site by vscode</title>
   </head>
   <body>
-    <img src="circle.png" alt="Cindy Profile Picture" height="90" width="90">
-    <h1>Cindy Liu</h1>
-    <h3><em>Scientist II <br/><strong><a href="https://www.thermofisher.com/us/en/home.html">Thermo Fisher Scienfic </a></strong></em></h3>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="circle.png" alt="Cindy Profile Picture" height="90" width="90"></td>
+        <td><h1>Cindy Liu</h1>
+          <h3><em>Scientist II <br/><strong><a href="https://www.thermofisher.com/us/en/home.html">Thermo Fisher Scientific </a></strong></em></h3></td>
+      </tr>
+    </table>
+
+
     <p>Strong knowledge of biological science and solid biotech skills in Molecular biology. A wide range of project experience on antibody development and virus development. </p>
     <ul>
       <li><a href="https://www.linkedin.com/in/cindy-chengjing-liu-5a3406113/">Linkedin</a></li>
