--- a/personal website /workexperience.html
+++ b/personal website /workexperience.html
@@ -7,8 +7,7 @@
 
 <body>
   <h1>WORK EXPERIENCE</h1>
-  <br/>
-  <table border="1px">
+  <!-- <table border="1px">
     <thead>
       <tr>
         <th>Dates</th>
@@ -29,7 +28,7 @@
       </tr>
     </tbody>
     <tfoot></tfoot>
-  </table>
+  </table> -->
   <h3><em>
     Analytical Development Associate<strong><br/><a href="https://www.sangamo.com/">Sangamo Therapeutics</a></strong></em>
   </h3>
@@ -74,6 +73,45 @@
   Operated and troubleshooted AKTA Flux S and Beckman Coulter Ultracentrifuge for UFDF and ultracentrifugation of viral particles.
 </li>
 </ul>
+<hr size="3" noshade>
+<h3>Skills</h3>
+<table  cellspacing="10">
+  <tr>
+    <td>
+      <table cellspacing="10">
+        <tr>
+          <td>Molecular Biology</td>
+          <td>⭐️⭐️⭐️⭐️⭐️</td>
+        </tr>
+        <tr>
+          <td>Python</td>
+          <td>⭐️⭐️⭐️⭐️</td>
+        </tr>
+        <tr>
+          <td>MongoDB Databases</td>
+          <td>⭐️⭐️⭐️</td>
+        </tr>
+      </table>
+    </td>
+    <td>
+      <table cellspacing="10">
+        <tr>
+          <td>JavaScript</td>
+          <td>⭐️⭐️⭐️⭐️⭐️</td>
+        </tr>
+        <tr>
+          <td>React.js</td>
+          <td>⭐️⭐️⭐️⭐️⭐️</td>
+        </tr>
+        <tr>
+          <td>Analytical Skills</td>
+          <td>⭐️⭐️⭐️⭐️</td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+
+</table>
 
 </body>
 
